fix: overlapping download button; updated deside about link

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -47,7 +47,7 @@
  }
 
  eox-jsonform {
-  margin-bottom: -70px;
+  margin-bottom: -10px;
  }
 
 eox-jsonform {
